lib/prepast.js
module.exports = (function() {
  /*
   * Generated by PEG.js 0.8.0.
   *
   * http://pegjs.majda.cz/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function SyntaxError(message, expected, found, offset, line, column) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.offset   = offset;
    this.line     = line;
    this.column   = column;

    this.name     = "SyntaxError";
  }

  peg$subclass(SyntaxError, Error);

  function parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},

        peg$FAILED = {},

        peg$startRuleFunctions = { TranslationUnit: peg$parseTranslationUnit },
        peg$startRuleFunction  = peg$parseTranslationUnit,

        peg$c0 = peg$FAILED,
        peg$c1 = [],
        peg$c2 = function(a, b) {
                return addPositionInfo({type:'Code', val:a, space:b})
                },
        peg$c3 = function(a) {
                return addPositionInfo({type:'TranslationUnit', lines: a});
            },
        peg$c4 = function(a, b) {a.space = b;return a;},
        peg$c5 = function(a) {return addPositionInfo({type:'PrepUndef', Identifier:a});},
        peg$c6 = null,
        peg$c7 = function(a, b) {
            return addPositionInfo({type:'PrepSimpleMacro', Identifier:a, Replacement:b});
        },
        peg$c8 = function(a, b, c) {
            return addPositionInfo({type:'PrepFunctionMacro', Identifier:a, Args:b, Replacement:c});
        },
        peg$c9 = function(a) {return a;},
        peg$c10 = function(a, b) {
            return [a].concat(b);
        },
        peg$c11 = function(a, b, c) {
            return {type:'PrepFunctionMacroCall', Identifier:a, Args:b, space:c};
            },
        peg$c12 = function(a) {
            var ret = [];
            var lastString = null;
            for (var i=0;i<a.length;i++){
                if (a[i].type==='Seperator'){
                    if (lastString===null){
                        lastString = a[i];
                    }else{
                        lastString.val += lastString.space + a[i].val;
                        lastString.space = a[i].space;
                    }
                }else{
                    if (lastString!==null){
                        ret.push(lastString);
                        lastString = null;
                    }
                    ret.push(a[i]);
                }
            }
            if (lastString!==null)
                ret.push(lastString);
            return ret;
        },
        peg$c13 = function(a) {
            return addPositionInfo({type:'PrepIncludeLib', name:a});
        },
        peg$c14 = function(a) {
            return addPositionInfo({type:'PrepIncludeLocal', name:a});
        },
        peg$c15 = /^[\/\\.]/,
        peg$c16 = { type: "class", value: "[\\/\\\\.]", description: "[\\/\\\\.]" },
        peg$c17 = function(a) {return a.join('');},
        peg$c18 = function(a) {return addPositionInfo({type:'PrepIfdef', Identifier:a});},
        peg$c19 = function(a) {return addPositionInfo({type:'PrepIfndef', Identifier:a});},
        peg$c20 = function() {return addPositionInfo({type:'PrepEndif'});},
        peg$c21 = function() {return addPositionInfo({type:'PrepElse'});},
        peg$c22 = "#",
        peg$c23 = { type: "literal", value: "#", description: "\"#\"" },
        peg$c24 = "define",
        peg$c25 = { type: "literal", value: "define", description: "\"define\"" },
        peg$c26 = "undef",
        peg$c27 = { type: "literal", value: "undef", description: "\"undef\"" },
        peg$c28 = "include",
        peg$c29 = { type: "literal", value: "include", description: "\"include\"" },
        peg$c30 = "ifdef",
        peg$c31 = { type: "literal", value: "ifdef", description: "\"ifdef\"" },
        peg$c32 = "ifndef",
        peg$c33 = { type: "literal", value: "ifndef", description: "\"ifndef\"" },
        peg$c34 = "endif",
        peg$c35 = { type: "literal", value: "endif", description: "\"endif\"" },
        peg$c36 = "else",
        peg$c37 = { type: "literal", value: "else", description: "\"else\"" },
        peg$c38 = function(a) {
                return a.join('');
              },
        peg$c39 = /^[ \t\x0B\f]/,
        peg$c40 = { type: "class", value: "[ \\t\\x0B\\f]", description: "[ \\t\\x0B\\f]" },
        peg$c41 = /^[ \n\r\t\x0B\f]/,
        peg$c42 = { type: "class", value: "[ \\n\\r\\t\\x0B\\f]", description: "[ \\n\\r\\t\\x0B\\f]" },
        peg$c43 = "/*",
        peg$c44 = { type: "literal", value: "/*", description: "\"/*\"" },
        peg$c45 = void 0,
        peg$c46 = "*/",
        peg$c47 = { type: "literal", value: "*/", description: "\"*/\"" },
        peg$c48 = function(a) {return '';},
        peg$c49 = "//",
        peg$c50 = { type: "literal", value: "//", description: "\"//\"" },
        peg$c51 = "\n",
        peg$c52 = { type: "literal", value: "\n", description: "\"\\n\"" },
        peg$c53 = "auto",
        peg$c54 = { type: "literal", value: "auto", description: "\"auto\"" },
        peg$c55 = "break",
        peg$c56 = { type: "literal", value: "break", description: "\"break\"" },
        peg$c57 = "case",
        peg$c58 = { type: "literal", value: "case", description: "\"case\"" },
        peg$c59 = "char",
        peg$c60 = { type: "literal", value: "char", description: "\"char\"" },
        peg$c61 = "const",
        peg$c62 = { type: "literal", value: "const", description: "\"const\"" },
        peg$c63 = "continue",
        peg$c64 = { type: "literal", value: "continue", description: "\"continue\"" },
        peg$c65 = "default",
        peg$c66 = { type: "literal", value: "default", description: "\"default\"" },
        peg$c67 = "double",
        peg$c68 = { type: "literal", value: "double", description: "\"double\"" },
        peg$c69 = "do",
        peg$c70 = { type: "literal", value: "do", description: "\"do\"" },
        peg$c71 = "enum",
        peg$c72 = { type: "literal", value: "enum", description: "\"enum\"" },
        peg$c73 = "extern",
        peg$c74 = { type: "literal", value: "extern", description: "\"extern\"" },
        peg$c75 = "float",
        peg$c76 = { type: "literal", value: "float", description: "\"float\"" },
        peg$c77 = "for",
        peg$c78 = { type: "literal", value: "for", description: "\"for\"" },
        peg$c79 = "goto",
        peg$c80 = { type: "literal", value: "goto", description: "\"goto\"" },
        peg$c81 = "if",
        peg$c82 = { type: "literal", value: "if", description: "\"if\"" },
        peg$c83 = "int",
        peg$c84 = { type: "literal", value: "int", description: "\"int\"" },
        peg$c85 = "inline",
        peg$c86 = { type: "literal", value: "inline", description: "\"inline\"" },
        peg$c87 = "long",
        peg$c88 = { type: "literal", value: "long", description: "\"long\"" },
        peg$c89 = "register",
        peg$c90 = { type: "literal", value: "register", description: "\"register\"" },
        peg$c91 = "restrict",
        peg$c92 = { type: "literal", value: "restrict", description: "\"restrict\"" },
        peg$c93 = "return",
        peg$c94 = { type: "literal", value: "return", description: "\"return\"" },
        peg$c95 = "short",
        peg$c96 = { type: "literal", value: "short", description: "\"short\"" },
        peg$c97 = "signed",
        peg$c98 = { type: "literal", value: "signed", description: "\"signed\"" },
        peg$c99 = "sizeof",
        peg$c100 = { type: "literal", value: "sizeof", description: "\"sizeof\"" },
        peg$c101 = "static",
        peg$c102 = { type: "literal", value: "static", description: "\"static\"" },
        peg$c103 = "struct",
        peg$c104 = { type: "literal", value: "struct", description: "\"struct\"" },
        peg$c105 = "switch",
        peg$c106 = { type: "literal", value: "switch", description: "\"switch\"" },
        peg$c107 = "typedef",
        peg$c108 = { type: "literal", value: "typedef", description: "\"typedef\"" },
        peg$c109 = "union",
        peg$c110 = { type: "literal", value: "union", description: "\"union\"" },
        peg$c111 = "unsigned",
        peg$c112 = { type: "literal", value: "unsigned", description: "\"unsigned\"" },
        peg$c113 = "void",
        peg$c114 = { type: "literal", value: "void", description: "\"void\"" },
        peg$c115 = "volatile",
        peg$c116 = { type: "literal", value: "volatile", description: "\"volatile\"" },
        peg$c117 = "while",
        peg$c118 = { type: "literal", value: "while", description: "\"while\"" },
        peg$c119 = "_Bool",
        peg$c120 = { type: "literal", value: "_Bool", description: "\"_Bool\"" },
        peg$c121 = "_Complex",
        peg$c122 = { type: "literal", value: "_Complex", description: "\"_Complex\"" },
        peg$c123 = "_stdcall",
        peg$c124 = { type: "literal", value: "_stdcall", description: "\"_stdcall\"" },
        peg$c125 = "__declspec",
        peg$c126 = { type: "literal", value: "__declspec", description: "\"__declspec\"" },
        peg$c127 = "__attribute__",
        peg$c128 = { type: "literal", value: "__attribute__", description: "\"__attribute__\"" },
        peg$c129 = "_Imaginary",
        peg$c130 = { type: "literal", value: "_Imaginary", description: "\"_Imaginary\"" },
        peg$c131 = function(a, b, c) {
            return {type: 'Identifier', val:a+b.join(''), space:c}
        },
        peg$c132 = /^[\r\n,)]/,
        peg$c133 = { type: "class", value: "[\\r\\n,)]", description: "[\\r\\n,)]" },
        peg$c134 = function(a, b) {
            return {type: 'Seperator', val:a, space:b}
        },
        peg$c135 = /^[\r\n]/,
        peg$c136 = { type: "class", value: "[\\r\\n]", description: "[\\r\\n]" },
        peg$c137 = /^[a-z]/,
        peg$c138 = { type: "class", value: "[a-z]", description: "[a-z]" },
        peg$c139 = /^[A-Z]/,
        peg$c140 = { type: "class", value: "[A-Z]", description: "[A-Z]" },
        peg$c141 = /^[_]/,
        peg$c142 = { type: "class", value: "[_]", description: "[_]" },
        peg$c143 = /^[0-9]/,
        peg$c144 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c145 = "\\u",
        peg$c146 = { type: "literal", value: "\\u", description: "\"\\\\u\"" },
        peg$c147 = function(a) {return String.fromCharCode(a);},
        peg$c148 = "\\U",
        peg$c149 = { type: "literal", value: "\\U", description: "\"\\\\U\"" },
        peg$c150 = function(a) {
            return parseInt(a.join(''),16);
        },
        peg$c151 = /^[a-f]/,
        peg$c152 = { type: "class", value: "[a-f]", description: "[a-f]" },
        peg$c153 = /^[A-F]/,
        peg$c154 = { type: "class", value: "[A-F]", description: "[A-F]" },
        peg$c155 = "(",
        peg$c156 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c157 = ")",
        peg$c158 = { type: "literal", value: ")", description: "\")\"" },
        peg$c159 = ",",
        peg$c160 = { type: "literal", value: ",", description: "\",\"" },
        peg$c161 = "<",
        peg$c162 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c163 = /^[=]/,
        peg$c164 = { type: "class", value: "[=]", description: "[=]" },
        peg$c165 = ">",
        peg$c166 = { type: "literal", value: ">", description: "\">\"" },
        peg$c167 = "\"",
        peg$c168 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c169 = { type: "any", description: "any character" },

        peg$currPos          = 0,
        peg$reportedPos      = 0,
        peg$cachedPos        = 0,
        peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$reportedPos, peg$currPos);
    }

    function offset() {
      return peg$reportedPos;
    }

    function line() {
      return peg$computePosDetails(peg$reportedPos).line;
    }

    function column() {
      return peg$computePosDetails(peg$reportedPos).column;
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        peg$reportedPos
      );
    }

    function error(message) {
      throw peg$buildException(message, null, peg$reportedPos);
    }

    function peg$computePosDetails(pos) {
      function advance(details, startPos, endPos) {
        var p, ch;

        for (p = startPos; p < endPos; p++) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }
        }
      }

      if (peg$cachedPos !== pos) {
        if (peg$cachedPos > pos) {
          peg$cachedPos = 0;
          peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
        }
        advance(peg$cachedPosDetails, peg$cachedPos, pos);
        peg$cachedPos = pos;
      }

      return peg$cachedPosDetails;
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, pos) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      var posDetails = peg$computePosDetails(pos),
          found      = pos < input.length ? input.charAt(pos) : null;

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        pos,
        posDetails.line,
        posDetails.column
      );
    }

    function peg$parseTranslationUnit() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parseSpacing();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parsePreprocessor();
        if (s3 === peg$FAILED) {
          s3 = peg$currPos;
          s4 = peg$parsePrepMacroText();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseSpacing();
            if (s5 !== peg$FAILED) {
              peg$reportedPos = s3;
              s4 = peg$c2(s4, s5);
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$c0;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$c0;
          }
        }
        if (s3 !== peg$FAILED) {
          while (s3 !== peg$FAILED) {
            s2.push(s3);
            s3 = peg$parsePreprocessor();
            if (s3 === peg$FAILED) {
              s3 = peg$currPos;
              s4 = peg$parsePrepMacroText();
              if (s4 !== peg$FAILED) {
                s5 = peg$parseSpacing();
                if (s5 !== peg$FAILED) {
                  peg$reportedPos = s3;
                  s4 = peg$c2(s4, s5);
                  s3 = s4;
                } else {
                  peg$currPos = s3;
                  s3 = peg$c0;
                }
              } else {
                peg$currPos = s3;
                s3 = peg$c0;
              }
            }
          }
        } else {
          s2 = peg$c0;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseEOT();
          if (s3 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c3(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsePreprocessor() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parsePrepDefine();
      if (s1 === peg$FAILED) {
        s1 = peg$parsePrepInclude();
        if (s1 === peg$FAILED) {
          s1 = peg$parseConditionalInclusion();
        }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseSpacing();
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c4(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsePrepDefine() {
      var s0;

      s0 = peg$parsePrepFunctionMacro();
      if (s0 === peg$FAILED) {
        s0 = peg$parsePrepSimpleMacro();
        if (s0 === peg$FAILED) {
          s0 = peg$parsePrepUndef();
        }
      }

      return s0;
    }

    function peg$parsePrepUndef() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parseSHARP();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseUNDEF();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseIdentifier();
          if (s3 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c5(s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsePrepSimpleMacro() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = peg$parseSHARP();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseDEFINE();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseIdentifier();
          if (s3 !== peg$FAILED) {
            s4 = peg$parsePrepMacroText();
            if (s4 === peg$FAILED) {
              s4 = peg$c6;
            }
            if (s4 !== peg$FAILED) {
              peg$reportedPos = s0;
              s1 = peg$c7(s3, s4);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsePrepFunctionMacro() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parseSHARP();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseDEFINE();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseIdentifier();
          if (s3 !== peg$FAILED) {
            s4 = peg$parsePrepFunctionMacroArgs();
            if (s4 !== peg$FAILED) {
              s5 = peg$parsePrepMacroText();
              if (s5 !== peg$FAILED) {
                peg$reportedPos = s0;
                s1 = peg$c8(s3, s4, s5);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$c0;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsePrepFunctionMacroArgs() {
      var s0, s1, s2, s3, s4, s5, s6;
